Added css custom text and font

--- a/Desktop/resort/resort.html
+++ b/Desktop/resort/resort.html
@@ -22,5 +22,9 @@ alt="plane ticket photo">
 alt="a photo of mexico city">
 <img src="https://c1.wallpaperflare.com/preview/853/995/618/clownfish-diving-anemone.jpg"
 alt="clown fish photo">
+<head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Michael's favorite things</title>
+</head>
 </body>
 </html>
